--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <div class="bg-primary shadow-md">
                                     <img src="assets/images/case/malv.png" alt="">
                                     <div class="p-3 text-center">
-                                        <h4 class="fs-6 fw-bold">Malvsylvereth Jehantel</h4>
+                                        <h4 class="fs-6 fw-bold">Malvsylveret Jehantel</h4>
                                         <h4 class="fs-6 fw-bold">MH (FC Leader)</h4>
                                     </div>
                                 </div>
@@ -151,7 +151,7 @@
                         <div class="row  d-flex justify-content-center" >
                             <div class="col-xl-2 col-md-6 mb-3">
                                 <div class="bg-primary shadow-md">
-                                    <img src="assets/images/case/draksis2.png" alt="">
+                                    <img src="assets/images/case/draksis3.png" alt="">
                                     <div class="p-3 text-center">
                                         <h4 class="fs-6 fw-bold">Draksis Caelum</h4>
                                         <h4 class="fs-6 fw-bold">Vanguard</h4>
