--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <img src="assets/images/case/malv.png" alt="">
                                     <div class="p-3 text-center">
                                         <h4 class="fs-6 fw-bold">Malvsylveret Jehantel</h4>
-                                        <h4 class="fs-6 fw-bold">MH (FC Leader)</h4>
+                                        <h4 class="fs-6 fw-bold">Guardian (FC Leader)</h4>
                                     </div>
                                 </div>
                             </div>
